<resources>
    <string name="app_name">Кто не хочет стать отчисленным</string>
    <string name="title_activity_main_menu">Кнхсо</string>
    <string name="final_score_string">Ты набрал: %d</string>
    <string name="extra_string">Тебе задали ДОП вопрос! Не ответишь - не сдал!</string>
    <string name="play">Играть</string>
    <string name="result">Ты получил %s</string>
    <string name="add">Какой-то текст про Арсика</string>
    <string name="question">Тут вопрос</string>

    <string name="ans1">ответ 1</string>
    <string name="ans2">ответ 2</string>
    <string name="ans3">ответ 3</string>
    <string name="ans4">ответ 4</string>

    <string name="_50_50">50/50</string>
    <string name="cheat_note">Шпаргалка</string>
    <string name="groupmate_help">Помощь одногруппника</string>
    <string name="ars_help">Помощь ведущего</string>

    <string name="type">Тип вопроса</string>
    <string name="score">баллы: %</string>


    <string name="choose_difficulty">выберите сложность - от этого зависит, сколько баллов вы будете иметь на начало экзамена</string>
    <string name="difficulty_6">6</string>
    <string name="difficulty_10_25">10 - 25</string>
    <string name="difficulty_26_40">26 - 40</string>
    <string name="difficulty_41_50">41 - 50</string>

    <string name="_50_50_descr">Убирается два неправильных ответа, остается выбор из оставшихся двух вариантов ответа. С вероятностью 1:2 подсказка может не сработать.</string>
    <string name="cheat_note_descr">Выдаётся правильный ответ на один вопрос из всех, представленных в базе вопросов.</string>
    <string name="groupmate_help_descr">Игра выбирает один из ответов на заданный вопрос.</string>
    <string name="ars_help_descr">Ведущий правильно отвечает на заданный вопрос, но все остальные вопросы будут дополнительными.</string>

    <string name="rules">Правила игры</string>
    <string name="rules_part1">Для того, чтобы сдать экзамен, необходимо правильно ответить на 8 вопросов из различных областей знаний. Каждый вопрос имеет 4 варианта ответа, из которых только один является верным. За каждый вопрос начисляются различные баллы. Максимально можно набрать 50 баллов за экзамен.</string>
    <string name="rules_part2">В процессе игры вопрос внезапно может быть дополнительным, от которого будет зависеть ваша судьба: вы либо сможете ответить верно и продолжить игру, либо потеряете всё и станете отчисленным.</string>
    <string name="rules_part3">Игроку предлагаются 4 подсказки, из которых можно использовать только любые 3 по ходу игры. Определенную одну подсказку можно использовать только один раз за всю игру до дачи ответа на заданный вопрос. На дополнительном вопросе подсказки недоступны.</string>
    <string name="rules_part4">Перед началом экзамена выбирается сложность игры. Игроку дается случайное число из диапазона выбранной сложности - баллы за семестр. После окончания игры баллы за семестр и за экзамен складываются и выставляется оценка.</string>

</resources>
