<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PlayActivity"
   android:background="@color/white"
    >


    <TextView
        android:id="@+id/tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:fontFamily="@font/just_breathe_regular"
        android:textColor="@color/black"
        android:textSize="30sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/btn_ans1"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:fontFamily="@font/just_breathe_regular"
        android:text="@string/ans1"
        android:textColor="@color/black"
        android:textSize="10sp"

        style="@style/Widget.AppCompat.Button.Borderless"

        app:backgroundTint="@null"
        app:cornerRadius="5dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_marginEnd="300dp"
        android:layout_marginTop="50dp"

        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btn_ans2"
        android:layout_width="250dp"
        android:layout_height="80dp"

        android:fontFamily="@font/just_breathe_regular"
        android:text="@string/ans2"
        android:textColor="@color/black"

        style="@style/Widget.AppCompat.Button.Borderless"

        android:textSize="10sp"
        app:backgroundTint="@null"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ans1"

        android:layout_marginEnd="300dp"

        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btn_ans3"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:text="@string/ans3"
        android:textSize="10sp"
        android:textColor="@color/black"
        android:fontFamily="@font/just_breathe_regular"

        style="@style/Widget.AppCompat.Button.Borderless"

        app:backgroundTint="@null"
        app:cornerRadius="5dp"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:layout_marginStart="300dp"
        android:layout_marginTop="50dp" />

    <Button
        android:id="@+id/btn_ans4"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:fontFamily="@font/just_breathe_regular"
        android:text="@string/ans4"
        android:textColor="@color/black"

        style="@style/Widget.AppCompat.Button.Borderless"

        android:textSize="10sp"
        app:backgroundTint="@null"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        app:cornerRadius="5dp"

        android:layout_marginStart="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_ans3"

        />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/just_breathe_regular"
        android:text="@string/score"
        android:textSize="20sp"

        app:layout_constraintBottom_toTopOf="@+id/btn_ans1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_question"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="20sp"
        android:fontFamily="@font/just_breathe_regular"

        app:layout_constraintBottom_toTopOf="@+id/tv_question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_help1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"

        android:fontFamily="@font/just_breathe_regular"
        android:text="@string/_50_50"

        android:textColor="@color/black"
        android:textSize="15sp"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btn_help2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/just_breathe_regular"

        android:text="@string/cheat_note"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_help3"
        app:layout_constraintStart_toEndOf="@+id/btn_help1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"

        android:layout_marginStart="10dp"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btn_help3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/just_breathe_regular"
        android:text="@string/groupmate_help"

        android:textColor="@color/black"
        android:textSize="15sp"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="10dp"
        app:layout_constraintVertical_bias="0.1"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_help4"
        app:layout_constraintStart_toEndOf="@+id/btn_help2"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="10dp"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btn_help4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/just_breathe_regular"
        android:text="@string/ars_help"

        android:textColor="@color/black"
        android:textSize="15sp"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="10dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_help3"

        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#33AAAAAA"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"

        android:layout_marginStart="10dp"
        app:layout_constraintVertical_bias="0.1"/>
    <ProgressBar
        android:id="@+id/progressBarHorizontal"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:max="30000"
        android:minWidth="500dp"
        android:minHeight="50dp"
        android:progressBackgroundTint="@color/colorPrimary"
        android:progressTint="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>